# Kateto

./: .codex  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  RULES.md  SPEC.md  TODO.md  config.toml  main.py  pyproject.toml  requirements.txt
.omo/: boulder.json
.omo/drafts/: kateto-mvp.md
.omo/plans/: kateto-mvp.md  kateto-zerogpu-publishing.md
.omo/start-work/: ledger.jsonl
classifiers/mmbert/: pyproject.toml  server.py
config/defaults/: config.toml
demo-video/: package-lock.json  package.json
demo-video/src/: Composition.tsx  index.css
docker/: config.toml  entrypoint.sh
docs/: .temp  AGENT.md  known-issues.md  system-mcp-architecture.md  test-evidence-2026-07-18.md  test-evidence-comprehensive-2026-07-18.md  test-read-tool-2026-07-18.md
docs/architecture/: config.md  design-decisions.md  event-system.md  hot-reload.md  overview.md  plugin-manager.md  ponytail-review.md
docs/bugs/: 01-whisper-gpu.md  02-no-e2e-tests.md  03-callbackqueue-capacity.md  04-plugin-error-isolation.md  05-no-structured-logging.md  06-hot-reload-test-coverage.md  07-not-runnable.md  08-hot-reload-cancels-workers.md  09-text-chunk-capture.md  10-runtime-voice-enable.md  11-backlog-priority-filter.md  12-todo-md-location.md  13-duplicated-files.md  14-no-runtime-tools.md  15-hot-reload-unnecessary-replacement.md  16-tui-plugin-toggle.md  17-tui-plugin-switch-voice-visibility.md  19-agent-loop-no-stream.md  (+19 more)
kateto/: __main__.py  live.py  run_mode.py
space/: app.py  contracts.py  presentation.py  providers.py  runtime.py
web/: PLAN.md  app.js  index.html
(+186 files in other folders)
