[project]
name = "kateto"
version = "0.1.0"
description = "Kateto MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0.0",
    "edge-tts>=7.0.0",
    "gradio>=6.15.2,<7.0.0",
    "google-auth-oauthlib==1.2.2",
    "httpx==0.28.1",
    "mcp==1.28.1",
    "numpy>=2.5.1",
    "openai==2.45.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "silero-vad<6.2",
    "spaces>=0.39.0",
    "sounddevice==0.5.5",
    "textual==8.2.8",
    "torch>=2.13.0",
    "watchdog==6.0.0",
]

[project.scripts]
kateto = "kateto.__main__:main"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[project.optional-dependencies]
space = [
    "gradio==6.15.2",
    "spaces>=0.39.0",
]

[tool.pytest.ini_options]
testpaths = ["kateto/tests"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
